# liburl

./: .gitmodules  CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
bench/: CMakeLists.txt  parse.c
include/: url.h
include/url/: character-set.h  parse.h  percent-encode.h  type.h
src/: character-set.h  idna.h  infra.h  parse.h  percent-encode-set.h  percent-encode.h  punycode.h  serialize.h  type.h  url.c
test/: CMakeLists.txt  helpers.h  parse-custom-scheme-fragment.c  parse-custom-scheme-query-fragment.c  parse-custom-scheme-query.c  parse-custom-scheme-relative-absolute-path-empty-host.c  parse-custom-scheme-relative-absolute-path-host-empty-path.c  parse-custom-scheme-relative-absolute-path-host-no-path.c  parse-custom-scheme-relative-absolute-path.c  parse-custom-scheme-relative-bare-path-username.c  parse-custom-scheme-relative-bare-path.c  parse-custom-scheme-relative-double-dot-host-empty-path.c  parse-custom-scheme-relative-double-dot-host-no-path.c  parse-custom-scheme-relative-double-dot-host.c  parse-custom-scheme-relative-double-slash.c  parse-custom-scheme-relative-empty-path-host-empty-path.c  parse-custom-scheme-relative-empty-path-host-no-path.c  parse-custom-scheme-relative-empty-path-host.c  parse-custom-scheme-relative-empty-path.c  parse-custom-scheme-relative-fragment-host-empty-path.c  parse-custom-scheme-relative-fragment-host-no-path.c  parse-custom-scheme-relative-fragment-host.c  parse-custom-scheme-relative-opaque-path-fragment-with-query.c  parse-custom-scheme-relative-opaque-path-fragment.c  parse-custom-scheme-relative-path-empty-host.c  parse-custom-scheme-relative-path-host-empty-path.c  parse-custom-scheme-relative-path-host-no-path.c  parse-custom-scheme-relative-path-host.c  parse-custom-scheme-relative-path.c  parse-custom-scheme-root-path-fragment.c  parse-custom-scheme-root-path-query-fragment.c  parse-custom-scheme-root-path-query.c  parse-custom-scheme-root-path.c  parse-file-scheme-double-dot-drive-letter.c  parse-file-scheme-double-dot-end.c  parse-file-scheme-double-dot-middle.c  parse-file-scheme-double-dot-root-path.c  parse-file-scheme-double-dot.c  parse-file-scheme-drive-letter-normalize.c  parse-file-scheme-drive-letter.c  (+58 more)
